womtool/src/test/resources/validate/wdl_draft2/invalid/unexpected_call_input_failure/error.txt
ERROR: Call supplied an unexpected input: The 'hello' task doesn't have an input called 'greeting':

    greeting = "bonjour"   # But this is an unexpected input! Should be an error!
    ^

Options:
 - Add the input 'greeting' to the 'hello' task (defined on line 13).
 - Remove 'greeting = ...' from hello's inputs (on line 5).
